WebApplication1/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: otus
  name: webapplication1-service
spec:
  selector:
    app: webapplication1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
